name:                javac
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/rowland66/javac#readme
license:             BSD3
author:              Rowland Smith
maintainer:          rowls66@gmail.com
copyright:           Rowland Smith 2020
category:            none
build-type:          Simple
cabal-version:       >=1.10

executable javac
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Compiler Lexer Parser Parser2 TypeChecker Environment ClassWriter ConstantPoolBuilder ByteCodeBuilder ClassPath TypeInfo
  build-depends:       base, parsec, containers, transformers, Glob, binary, bytestring, text, directory, vector, split, filepattern, text-show, extra, tuple
